--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,56 +7,65 @@
   <head>
     <meta charset="utf-8">
     <title>ACM-VIT Official Website</title>
+    <link rel="shortcut icon" href="/images/logo/ACM_Logo-icon.ico">
 
     <!--============================ jQuery link ===========================-- >
-    <!-- <script src="/js_scripts/jquery.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"></script>
 
-    <!--========================== Bootstrap link ===========================-->
-    <!-- <link rel="stylesheet" href="/stylesheets/bootstrap.css"> -->
-    <!-- <script src="/js_scripts/bootstrap.js"></script> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+      <!--========================== Popper.js link ===========================-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"></script>
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-
-
-    <!--========================== Popper.js link ===========================-->
-    <!-- <script src="/js_scripts/popper.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/esm/popper.js"
-    integrity="sha256-qiq4W/mJl5gfe8EY9IynnXl6TKDclDpr46rTYobTr9E="
-    crossorigin="anonymous"></script>
+      <!--========================== Bootstrap link ===========================-->
+      <!-- Bootstrap link  -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"></script>
 
       <!-- =========================Typed.js Link ===========================-->
-      <script src="/js_scripts/typed.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.9/typed.js"
+      integrity="sha256-DNIgEve3UjKv9ffoLz8O+o6+EEDqbZ9G3hcmFrb/Icg="
+      crossorigin="anonymous"></script>
 
     <!--========================== Particles.js link ========================-->
-    <script src="/js_scripts/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
     <!-- ============================== Image Hover Link =======================-->
-    <link rel="stylesheet" href="/stylesheets/imagehover.css">
+    <link rel="stylesheet" href="../stylesheets/imagehover.css">
 
     <!-- ======================== Font Awesome Link ============================-->
-    <!-- <link rel="stylesheet" href="/stylesheets/font-awesome.min.css" /> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-    integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+     integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0="
+     crossorigin="anonymous" />
 
      <!-- =========================== AOS Links ================================-->
-     <!-- <link rel="stylesheet" href="/js_scripts/aos-master/src/sass/aos.css"/> -->
-     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-     <!-- <script src="/js_scripts/aos-master/src/js/aos.js"></script> -->
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.3/aos.css"
+     integrity="sha256-GqiEX9BuR1rv5zPU5Vs2qS/NSHl1BJyBcjQYJ6ycwD4="
+     crossorigin="anonymous"/>
+
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.3/aos.js"
+     integrity="sha256-XgofZbWZ3KPvXyYr10GN0mhZC08alGapd871TrGeujQ="
+     crossorigin="anonymous"></script>
 
     <!-- =========================== Google Fonts Link ======================== -->
-    <link href="/stylesheets/google-fonts.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
   </head>
   <body>
 
   <link rel="stylesheet" href="/stylesheets/header.css">
+
+  <!-- //////////////////////////////////////////////// Particles JS Initialisation ////////////////////////////////////////////// -->
+  <div id="particles-js-home" style="background-size: cover; background-repeat: no-repeat; background-position: 50% 50%; z-index: -10;">
+    <canvas class="particles-js-canvas-el" width="1898" height="187" style="width: 100%; height: 100%; z-index: -10;"></canvas>
+  </div>
