--- a/views/stylesheets/header.css
+++ b/views/stylesheets/header.css
@@ -1,14 +1,27 @@
 
-    /* ---- reset ---- */
+/* ---- reset ---- */
 body {
   margin: 0;
+  background-color: rgba(0, 0, 0, 0.8);
   font: normal 75% Arial, Helvetica, sans-serif;
-    background-color: rgba(0, 0, 0, 0.8);
 }
 canvas {
-  display: block;
-  vertical-align: bottom;
+    display:block;
+    /* background-color: rgba(0, 0, 0, 0.4); */
+    position: fixed;
+    z-index: -1;
 }
+#particles-js-home {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+} /* ---- stats.js ---- */
+
 
 .navScrolled{
   background-color: blue !important;
@@ -19,9 +32,10 @@ canvas {
 }
 /* ---- particles.js container ---- */
   .particles-js-home {
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
-  height: 940%;
+  height: 100%;
+  background-attachment: fixed !important;
   /* background-color: rgba(0, 31, 71, 0.8); */
   /* background-image: url(""); */
   background-repeat: no-repeat;
@@ -50,18 +64,18 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  z-index: -10 !important;
+  z-index: -1 !important;
 }
 #particles-js-contactUs {
   position: absolute;
   width: 100%;
-  height: 425%;
+  height: 390%;
   /* background-color: rgba(17, 88, 163, 0.5); */
   /* background-image: url(""); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  z-index: -10 !important;
+  z-index: -1 !important;
 }
 #particles-js-blogs1 {
   position: absolute;
@@ -72,18 +86,18 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  z-index: -10 !important;
+  z-index: -1 !important;
 }
 #particles-js-blogs {
   position: absolute;
   width: 100%;
-  height: 450%;
+  height: 390%;
   /* background-color: rgba(17, 88, 163, 0.5); */
   /* background-image: url(""); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  z-index: -10 !important;
+  z-index: -1 !important;
 }
 #particles-js-events {
   position: absolute;
