Fixed some bugs

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -66,11 +66,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-aos="fade-up">
             <figure class="imghvr-blur" style="margin-left: 3%; width: 95%" >
-              <img class="d-block w-100" src="http://talkingtrading.com.au/wp-content/uploads/2015/05/tech1.jpg" alt="Second slide" style="width: 40%; height: 35%">
-              <figcaption>
-                <div class="container">
-                  <a href="#"><button type="button" class="btn btn-primary btn-lg shadow-lg" style="position: absolute; left: 45%; top: 50%;">Register</button></a>
-                </div>
+              <img class="d-block w-100" src="/images/upcoming-events/bootstrap.png" alt="Second slide" style="width: 40%; height: 35%">
+            <figcaption>
+              <div class="container">
+                <a href="#" onclick="window.open('https://goo.gl/forms/SW7hp07oRy5gZbc43', '_blank')"><button type="button" class="btn btn-primary btn-lg shadow-lg" style="position: absolute; left: 45%; top: 50%;">Register</button></a>
+              </div>
               </figcaption>
             </figure>
           </div>
