--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -41,7 +41,7 @@
   <!--////////////////////////////////////////////// Navbar Ends ///////////////////////////////////////////-->
 
 
-  <!-- ////////////////////////////Email Us?///////////////////////// -->
+  <!-- //////////////////////////// Blogs top 3? ///////////////////////// -->
   <div class="jumbotron" id="partialBlogs-1" style=" color: white; background: linear-gradient(rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.07)); margin-bottom: 0% !important; padding-top: 2.5%; margin-top: 0%; border-width: 20px !important; text-align: justify; height: 500% !important;">
     <div class="container-fluid" style="width: 85%; height: 500% !important">
       <h4 class="display-4" data-aos="fade-up">Blogs</h4>
@@ -104,7 +104,7 @@
                 <p class="card-text"> <h4 style="text-align: justify; margin-left: 5%; margin-right: 5%"><%= blogs[i].gist %></h4> </p>
               </div>
               <div class="card-footer">
-                <small class="text-muted"> <h5 style="margin-left: 75%">By : <%= blogs[i].author %></h5></small>
+                <small class="text-muted"> <h5 style="text-align: right ; margin-bottom: 2%">By : <%= blogs[i].author %></h5></small>
               </div>
               <% if(currentAdmin) { %>
                 <form action="/blogs/<%= blogs[i]._id %>?_method=DELETE" method="POST">
