--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -182,7 +182,7 @@
                 <img class="card-img-top rounded" src="/images/core-mem/sanyans.png" alt="Card image cap" style="height: 65%">
                 <div class="card-body">
                   <h4 class="card-title" style="color: white; text-align: center">Sanyam Sharma</h4>
-                  <p class="card-text" style="color: white;"> <h5 style=" text-align: center">General Secretary</h5>
+                  <p class="card-text" style="color: white;"> <h5 style=" text-align: center">Gen. Secretary</h5>
                   <!-- <a href="#" disabled> <img src="/images/share-icons/linkedin.png" alt="" style="width: 18%; height: 18%; margin-left: 28%"> </a> -->
                   <p>
                     <a class="btn btn-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style=" margin-left: 33%; width: 40%;">
