Team partial changed to circles

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -41,7 +41,7 @@
   <!--////////////////////////////////////////////// Navbar Ends ///////////////////////////////////////////-->
 
   <link rel="stylesheet" href="/stylesheets/events.css">
-  <link rel="stylesheet" href="/stylesheets/imagehoverEvents.css">
+  <link rel="stylesheet" href="/stylesheets/imagehover.css">
 
 
   <!-- ////////////////////////////Email Us?///////////////////////// -->
