Added license and terms of use.
Also updated logo and team pictures.

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -1,3 +1,25 @@
+<!--
+    Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
+    Copyright (C) 2018  VEDANT NANDOSKAR
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+    Contact: vedant.nandoskar@gmail.com
+    Source Code: https://github.com/Vedant1202/ACM-VIT
+ -->
+
+
 <!-- ===================================================================== -->
                             <!-- About Us Page -->
 <!-- ===================================================================== -->
@@ -81,6 +103,10 @@
         </p>
       </div>
     </div>
+    <!-- ///////////// Down Arrow //////////////////////////// -->
+    <div class="arrow bounce" style=" padding-top: 2%;">
+      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-whoAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+    </div>
   </div>
 
   <!-- ////////////////////////////Who Are We?///////////////////////// -->
@@ -88,7 +114,7 @@
     <div class="container-fluid" style="width: 85%">
       <h4 class="display-4" data-aos="fade-up">Who Are We?</h4>
       <hr style="width: 10%; border-color: rgba(255, 255, 255, 0.6); margin-left:0px;" data-aos="fade-up">
-      <img src="/images/logo/ACM_Logo-edit.png" alt="" class="rounded shadow-lg img-thumbnail" style="width: 15%; height: 15%; float: right; margin-left: 3%; margin-top: 5%" data-aos="fade-up">
+      <img src="/images/logo/ACM_Logo-edit.png" alt="" class="rounded shadow-lg img-thumbnail" style="width: 20%; height: 120px; float: right; margin-left: 3%; margin-top: 5%" data-aos="fade-up">
       <img src="/images/logo/acm-logo-noText.png" alt="" class="rounded shadow-lg img-thumbnail" style="width: 15%; height: 15% !important; float: right; margin-top: 5%" data-aos="fade-up">
       <p style="margin-top: 20px; line-height: 28px; margin-bottom: 4%">
         <h2 data-aos="fade-up">Overview</h2>
@@ -113,6 +139,10 @@
           </span>
           </p>
       </p>
+    </div>
+    <!-- ///////////// Down Arrow //////////////////////////// -->
+    <div class="arrow bounce" style=" padding-top: 2%;">
+      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-aimAbout" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
     </div>
   </div>
 
