--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,3 +1,25 @@
+<!-- 
+    Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
+    Copyright (C) 2018  VEDANT NANDOSKAR
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+    Contact: vedant.nandoskar@gmail.com
+    Source Code: https://github.com/Vedant1202/ACM-VIT
+ -->
+
+
 
 <!-- ===================================================================== -->
                             <!-- Events Page -->
@@ -45,7 +67,7 @@
 
 
   <!-- ////////////////////////////Email Us?///////////////////////// -->
-  <div class="jumbotron" id="partialAbout-1" style=" color: white; background: linear-gradient(rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.07)); margin-bottom: 3% !important; margin-top: 0.5%; border-width: 20px !important; text-align: justify">
+  <div class="jumbotron" id="partialEvents-1" style=" color: white; background: linear-gradient(rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.07)); margin-bottom: 3% !important; margin-top: 0.5%; border-width: 20px !important; text-align: justify">
     <div class="container-fluid" style="width: 85%">
       <h4 class="display-4" data-aos="fade-up">Events</h4>
       <hr style="width: 5%; border-color: rgba(255, 255, 255, 0.6); margin-left: 1%;" data-aos="fade-up">
@@ -105,10 +127,14 @@
         </a>
       </div>
     </div>
+    <!-- ///////////// Down Arrow //////////////////////////// -->
+    <div class="arrow bounce" style=" padding-top: 2%;">
+      <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-prevEvents" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
+    </div>
   </div>
 
   <!-- /////////////////////////////////////// Prvious Events ///////////////////////////////// -->
-  <div class="jumbotron" id="partialAbout-2" style=" color: white; background: linear-gradient(rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.07)); margin-bottom: 0% !important; margin-top: 0%; border-width: 20px !important; text-align: justify">
+  <div class="jumbotron" id="partialEvents-2" style=" color: white; background: linear-gradient(rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.07)); margin-bottom: 0% !important; margin-top: 0%; border-width: 20px !important; text-align: justify">
     <div class="container-fluid" style="width: 85%">
       <h4 class="display-4" data-aos="fade-up">Previous Events</h4>
       <hr style="width: 12%; border-color: rgba(255, 255, 255, 0.6); margin-left: 1%;" data-aos="fade-up">
