--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,33 @@
+<!--
+    Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
+    Copyright (C) 2018  VEDANT NANDOSKAR
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Affero General Public License for more details.
+
+    You should have received a copy of the GNU Affero General Public License
+    along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+    Contact: vedant.nandoskar@gmail.com
+    Source Code: https://github.com/Vedant1202/ACM-VIT
+ -->
+
+
+
 <!-- ===================================================================== -->
                             <!-- Footer file  -->
 <!-- ===================================================================== -->
 
 
   <div class="container-fluid" style="background: linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.5)); height: 160px; margin-top: 0% !important; "></div>
-  <div class="conatiner-fluid" style="background-color: rgba(0, 0, 0, 0.5); height: 370px;">
+  <div class="container-fluid" style="background-color: rgba(0, 0, 0, 0.5); height: 370px;">
     <div class="row" style="color: white">
       <div class="col">
         <div style="margin-left: 25%; padding-top: 40px;">
@@ -24,17 +47,31 @@
       <div class="col">
         <div>
             <div class="row">
-              <a href="#"><img src="/images/logo/VIT.png" alt="" style="height: 50%; width: 40%; margin-left: 40%; margin-top: 7%"></a>
+              <a href="#credits" onclick="window.open('http://vit.edu.in/', '_blank')"><img src="/images/logo/VIT.png" alt="" style="height: 50%; width: 40%; margin-left: 40%; margin-top: 7%"></a>
             </div>
             <div class="row" style="padding-bottom: 0; margin-bottom: 0; bottom: 0; height: 20%">
               <div class="arrow bounce" style="margin-right: 100%; margin-bottom: 5; margin-top: 12%">
-                <a class="fa fa-arrow-up fa-3x btn btn-dark" href="#" data-toggle="tooltip" data-placement="top" title="Go up" style="background-color: rgba(0, 0, 0, 0); border-width: 0;"></a>
+                <a class="fa fa-arrow-up fa-3x btn btn-dark scrollup" href="#" data-toggle="tooltip" data-placement="top" title="Go up" style="background-color: rgba(0, 0, 0, 0); border-width: 0;"></a>
               </div>
             </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+<!-- ////////////////////////////////////////// Credits ///////////////////////////////////////////////// -->
+<div class="container-fluid" id="credits" style="background-color: black; color: white;" align="center">
+  <hr style="border-color: rgba(200, 200, 200, 0.3); padding-top: 0; margin-top: 0;">
+  <span style="font-size: 1.2em; color: white;">
+      Website developed and maintained by <a class="btn btn-link" href="#credits" onclick="window.open('https://github.com/Vedant1202', '_blank')" style="padding: 0">Vedant Nandoskar</a>
+      <hr style="border-color: rgba(255, 255, 255, 0.4); width: 30%; margin-top: 8px; margin-bottom: 8px;">
+      <p style=" margin-bottom: 0px !important;">
+        <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/16ZJj6hHl3rCCj2ePO09GKGEEoU9ZFacf/view?usp=sharing', '_blank')" style="margin-left: 4%; padding-top: 0; margin-bottom: 0px !important;">License</a>
+        <span style="margin-left: 1%; margin-right: 1%; margin-top: 0; padding-top: 0;">|</span>
+        <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/11ggeJ3_4MDuRrSn9mhefvhwvNjTggvIY/view?usp=sharing', '_blank')" style="margin-left: 0%; padding-top: 0; margin-bottom: 0px !important;">Terms of Use</a>
+      </p>
+  </span>
+</div>
 
   <script type="text/javascript" src="/js_scripts/header.js"></script>
 
