Fixed a few bugs

--- a/views/events.ejs
+++ b/views/events.ejs
@@ -1,4 +1,4 @@
-<!-- 
+<!--
     Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
     Copyright (C) 2018  VEDANT NANDOSKAR
 
@@ -32,8 +32,8 @@
   <!-- /////////////////////////////////////////////// Navbar //////////////////////////////////////////////-->
 
   <nav class="nav navbar navbar-expand-lg navbar-dark sticky-top" style="margin-top: 0px; background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.03)); padding: 0 !important;">
-    <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 10%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
-      <img src="/images/logo/ACM_Logo-edit.png" class="border img-thumbnail" style="height: 30%; width:30%; margin-top: 0px !important; margin-bottom: 0px !important;">
+    <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 12%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
+      <img src="/images/logo/ACM_Logo-edit.png" class="border img-thumbnail" style="height: 55px; width: 120px; margin-top: 0px !important; margin-bottom: 0px !important;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -54,8 +54,8 @@
         </div>
       </li>
     </div>
-    <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 12%">
-      <img class="float-right" src="/images/logo/acm.png" style="height: 37%; width:37%;">
+    <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 35%">
+      <img class="float-right" src="/images/logo/acm.png" style="height: 55px; width: 160px;">
     </a>
     </div>
   </nav>
@@ -74,7 +74,7 @@
       <p data-aos="fade-up" style="line-height: 90px; margin-top: 2%;">
         <h4 style="margin-left: 1%; line-height: 40px; margin-bottom: 8%" data-aos="fade-up">
           Take a look at our previous events as well as register for our upcoming events. The events are full of fun and promise enthusiastic learning approaches.
-          These events are conducted by qualified professionals which rich experience in their domains and thus ensure a wholistic and enriching experience.
+          These events are conducted by qualified professionals with rich experience in their domains and thus ensure a holistic and enriching experience.
         </h4>
       </p>
       <h4 class="display-4" data-aos="fade-up">Upcoming Events</h4>
