--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -30,7 +30,7 @@
   <!-- /////////////////////////////////////////////// Navbar //////////////////////////////////////////////-->
 
   <nav class="nav navbar navbar-expand-lg navbar-dark sticky-top" id="home" style="margin-top: 0px; background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.03)); padding: 0 !important;">
-    <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 10%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
+    <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 12%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
       <img src="/images/logo/ACM_Logo-edit.png" class="border img-thumbnail" style="height: 55px; width: 120px; margin-top: 0px !important; margin-bottom: 0px !important;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,8 +52,8 @@
         </div>
       </li>
     </div>
-    <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 12%">
-      <img class="float-right" src="/images/logo/acm.png" style="height: 37%; width:37%;">
+    <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 35%">
+      <img class="float-right" src="/images/logo/acm.png" style="height: 55px; width: 160px;">
     </a>
     </div>
   </nav>
@@ -74,7 +74,7 @@
     </h1>
   </div>
 <!-- ///////////// Down Arrow //////////////////////////// -->
-<div class="arrow bounce" style=" padding-top: 8%; margin-bottom: 2%">
+<div class="arrow bounce" style=" padding-top: 10%; margin-bottom: 2%">
   <button class="fa fa-angle-double-down fa-4x btn btn-dark scrolldown-aboutHome" style="background-color: rgba(0, 0, 0, 0.1); border-width: 0"></button>
 </div>
 
@@ -217,7 +217,7 @@
                   <div class="overlay rounded-circle">
                      <h2 class="blurHover" style="margin-top: 20%">Vedant Nandoskar</h2>
                      <h6 class="blurHover">Webmaster</h6>
-                     <a class="info" href="#" onclick="window.open('https://github.com/Vedant1202', '_blank')"> <img src="/images/share-icons/github.png" alt="" style="width: 22%; height: 22%; margin-left: 5%"> </a>
+                     <a class="info" href="#team" onclick="window.open('https://github.com/Vedant1202', '_blank')"> <img src="/images/share-icons/github.png" alt="" style="width: 22%; height: 22%; margin-left: 5%"> </a>
                      <a class="info" href="#team" onclick="window.open('https://www.linkedin.com/in/vedant-nandoskar-692824169/', '_blank')"> <img src="/images/share-icons/linkedin-color.png" alt="" style="width: 30%; height: 30%; margin-left: 0%"></a>
                   </div>
               </div>
@@ -333,7 +333,7 @@
                   <div class="overlay rounded-circle">
                      <h2 class="blurHover" style="margin-top: 20%">Rohan Kokkula</h2>
                      <h6 class="blurHover">Photography Head</h6>
-                     <a class="info" href="#" onclick="window.open('https://github.com/rohan0301', '_blank')"> <img src="/images/share-icons/github-white.png" alt="" style="width: 22%; height: 22%; margin-left: 5%"> </a>
+                     <a class="info" href="#team" onclick="window.open('https://github.com/rohan0301', '_blank')"> <img src="/images/share-icons/github-white.png" alt="" style="width: 22%; height: 22%; margin-left: 5%"> </a>
                      <a class="info" href="#team" onclick="window.open('https://www.linkedin.com/in/rohan-kokkula-0a8b72137/', '_blank')"> <img src="/images/share-icons/linkedin-color.png" alt="" style="width: 30%; height: 30%; margin-left: 0%"></a>
                   </div>
               </div>
