--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -30,14 +30,14 @@
   <div class="container-fluid" style="background-color: rgba(0, 0, 0, 0.5); height: 370px;">
     <div class="row" style="color: white">
       <div class="col">
-        <div style="margin-left: 25%; padding-top: 40px;">
+        <div style="margin-left: 20%; padding-top: 40px;">
           <h1 style="width: 50%;">See what's the buzz about
           </h1>
           <hr style="width: 15%; border-color: white; float: left">
           <p>
             <h4 class="text text-muted">
               <p style="margin-left: 0%; margin-top: 12%" >Social Media</p>
-              <a href="#" onclick="window.open('https://www.instagram.com/acm_vit/', '_blank')" style="margin-left: 5%" data-toggle="tooltip" data-placement="top" title="Instagram Handle"><img src="/images/share-icons/instagram.png" style="height: 7%; width: 7%"></a>
+              <a href="#" onclick="window.open('https://www.instagram.com/acm_vit/', '_blank')" style="margin-left: 0.5%" data-toggle="tooltip" data-placement="top" title="Instagram Handle"><img src="/images/share-icons/instagram.png" style="height: 7%; width: 7%"></a>
               <a href="#" onclick="window.open('https://www.facebook.com/acmvitchapter/?hc_ref=ARQ2reAqo5XYo--nSYnOgn3p6z-7u3waZlEKUY5_fp2FKAnGmBPGCiHyg67KArKn8aM&__xts__[0]=68.ARDPw9sNWPUJeyhQONqCDrWaFDZPaph2AEXOyKxaNLNreL_BPL0qre2WvMhkA8ZvMNkMzG2If-vb2EKfNJqa4ipa7SoN1rH4RFuOagNCbTZTRaL3Cj7BlJvf9BDTGCYynjfZ2zg&__tn__=kC-R', '_blank')" style="margin-left: 1.5%" data-toggle="tooltip" data-placement="top" title="Facebook Handle"><img src="/images/share-icons/facebook.png" style="height: 8%; width: 8%"></a>
               <a href="#" style="margin-left: 0.8%" data-toggle="tooltip" data-placement="top" title="LinkedIn Handle"><img src="/images/share-icons/linkedin.png" style="height: 9%; width: 9%"></a>
             </h4>
@@ -46,11 +46,12 @@
       </div>
       <div class="col">
         <div>
-            <div class="row">
-              <a href="#credits" onclick="window.open('http://vit.edu.in/', '_blank')"><img src="/images/logo/VIT.png" alt="" style="height: 50%; width: 40%; margin-left: 40%; margin-top: 7%"></a>
-            </div>
+          <div class="row">
+            <a href="#credits" onclick="window.open('http://vit.edu.in/', '_blank')" style="margin-left: 40%;"><img src="/images/logo/VIT.png" alt="" style="height: 72px; width: 270px; margin-top: 7%"></a>
+            <a href="#credits" onclick="window.open('https://www.acm.org/', '_blank')" style="margin-left: 40%; margin-top: 8%;"><img src="/images/logo/acm.png" style="height: 90px; width: 270px;"></a>
+          </div>
             <div class="row" style="padding-bottom: 0; margin-bottom: 0; bottom: 0; height: 20%">
-              <div class="arrow bounce" style="margin-right: 100%; margin-bottom: 5; margin-top: 12%">
+              <div class="arrow bounce" style="margin-right: 100%; margin-bottom: 5%; margin-top: 2%">
                 <a class="fa fa-arrow-up fa-3x btn btn-dark scrollup" href="#" data-toggle="tooltip" data-placement="top" title="Go up" style="background-color: rgba(0, 0, 0, 0); border-width: 0;"></a>
               </div>
             </div>
@@ -61,15 +62,15 @@
 </div>
 <!-- ////////////////////////////////////////// Credits ///////////////////////////////////////////////// -->
 <div class="container-fluid" id="credits" style="background-color: black; color: white;" align="center">
-  <hr style="border-color: rgba(200, 200, 200, 0.3); padding-top: 0; margin-top: 0;">
-  <span style="font-size: 1.2em; color: white;">
-      Website developed and maintained by <a class="btn btn-link" href="#credits" onclick="window.open('https://github.com/Vedant1202', '_blank')" style="padding: 0">Vedant Nandoskar</a>
-      <hr style="border-color: rgba(255, 255, 255, 0.4); width: 30%; margin-top: 8px; margin-bottom: 8px;">
-      <p style=" margin-bottom: 0px !important;">
-        <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/16ZJj6hHl3rCCj2ePO09GKGEEoU9ZFacf/view?usp=sharing', '_blank')" style="margin-left: 4%; padding-top: 0; margin-bottom: 0px !important;">License</a>
-        <span style="margin-left: 1%; margin-right: 1%; margin-top: 0; padding-top: 0;">|</span>
-        <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/11ggeJ3_4MDuRrSn9mhefvhwvNjTggvIY/view?usp=sharing', '_blank')" style="margin-left: 0%; padding-top: 0; margin-bottom: 0px !important;">Terms of Use</a>
-      </p>
+  <hr style="border-color: rgba(200, 200, 200, 0.3); padding-top: 0; margin-top: 0; margin-bottom: 3px;">
+  <span style="font-size: 1.2em; color: rgba(170, 170, 170, 0.6) !important;">
+    <p style=" margin-bottom: 0px !important; margin-top: 0; padding-top: 0">
+      <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/16ZJj6hHl3rCCj2ePO09GKGEEoU9ZFacf/view?usp=sharing', '_blank')" style="margin-left: 6.5%; padding-top: 0; margin-bottom: 0px !important; margin-top: 0; color: rgba(220, 220, 220, 0.7) !important;">License</a>
+      <span style="margin-left: 1%; margin-right: 1%; margin-top: 0; padding-top: 0;">|</span>
+      <a class="btn btn-link" href="#credits" onclick="window.open('https://drive.google.com/file/d/11ggeJ3_4MDuRrSn9mhefvhwvNjTggvIY/view?usp=sharing', '_blank')" style="margin-left: 0%; padding-top: 0; margin-bottom: 0px !important; margin-top: 0; color: rgba(220, 220, 220, 0.7) !important;">Terms of Use</a>
+    </p>
+    <hr style="border-color: rgba(255, 255, 255, 0.4); width: 30%; margin-top: 0; margin-bottom: 8px; margin-left: 37%;">
+    <span style="margin-left: 7%">Made with <img src="/images/heart.png" alt="" style="width: 1.5%; height: 1.5%;"> by <a class="btn btn-link" href="#credits" onclick="window.open('https://github.com/Vedant1202', '_blank')" style="padding: 0; color: rgba(255, 255, 255, 0.8)">Vedant Nandoskar</a></span>
   </span>
 </div>
 
