--- a/views/signInAdmin.ejs
+++ b/views/signInAdmin.ejs
@@ -1,4 +1,4 @@
-<!-- 
+<!--
     Official Website of ACM Student Chapter of Vidyalankar Institute of Technology
     Copyright (C) 2018  VEDANT NANDOSKAR
 
@@ -28,8 +28,8 @@
     <!-- /////////////////////////////////////////////// Navbar //////////////////////////////////////////////-->
 
     <nav class="nav navbar navbar-expand-lg navbar-dark sticky-top" style="margin-top: 0px; background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.03)); padding: 0 !important;">
-      <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 10%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
-        <img src="/images/logo/ACM_Logo-edit.png" class="border img-thumbnail" style="height: 30%; width:30%; margin-top: 0px !important; margin-bottom: 0px !important;">
+      <a class="navbar-brand" href="/" style="margin-right: 0%; margin-left: 12%; width: 12%; margin-top: 0px !important; margin-bottom: 0px !important;">
+        <img src="/images/logo/ACM_Logo-edit.png" class="border img-thumbnail" style="height: 55px; width: 120px; margin-top: 0px !important; margin-bottom: 0px !important;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -50,8 +50,8 @@
           </div>
         </li>
       </div>
-      <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 12%">
-        <img class="float-right" src="/images/logo/acm.png" style="height: 37%; width:37%;">
+      <a class="navbar-brand" href="#" onclick="window.open('https://www.acm.org/', '_blank')" style="float: right; margin-left: 35%">
+        <img class="float-right" src="/images/logo/acm.png" style="height: 55px; width: 160px;">
       </a>
       </div>
     </nav>
