Fixed the map responsiveness issue

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -270,6 +270,7 @@
                   <div class="overlay rounded-circle">
                      <h2 class="blurHover" style="margin-top: 20%">Bhanu Tekwani</h2>
                      <h6 class="blurHover">Convenor</h6>
+                     <a class="info" href="#team" onclick="window.open('https://in.linkedin.com/in/bhanu-tekwani-2815b8a9', '_blank')"> <img src="/images/share-icons/linkedin-color.png" alt="" style="width: 30%; height: 30%; margin-left: 2%"> </a>
                      <!-- <a class="info" href="#"></a> -->
                   </div>
               </div>
