--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -32,6 +32,19 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVcUVEH2xpI5hDRSM4lh9RtjbC6bfq53Y&callback=initMap"
   async defer></script>
 
+  <style media="screen">
+
+      #map_container{
+      position: relative;
+      }
+      #map{
+      height: 550px;
+      overflow: hidden;
+      padding-bottom: 22.25%;
+      padding-top: 30px;
+      position: relative;
+      }
+  </style>
 
   <!-- /////////////////////////////////////////////// Navbar //////////////////////////////////////////////-->
 
@@ -52,9 +65,9 @@
       <li class="nav-item dropdown" style="margin-left: 12%">
         <a class="nav-link active dropdown-toggle" href="/contactUs" id="contactDropdown" data-toggle="dropdown" aria-expanded="false"><span style="font-size: 1.7em !important">Contact</span></a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/contactUs#query">Have a Query?</a>
-          <a class="dropdown-item" href="/contactUs#locate">Locate us</a>
-          <a class="dropdown-item" href="/contactUs#socialMedia">Social Media</a>
+          <a class="dropdown-item scrollup" href="#query">Have a Query?</a>
+          <a class="dropdown-item go" href="#locate">Locate us</a>
+          <a class="dropdown-item go" href="#socialMedia">Social Media</a>
         </div>
       </li>
     </div>
@@ -119,9 +132,11 @@
       <h4 class="display-4" data-aos="fade-up">Locate us</h4>
       <hr style="width: 7%; border-color: rgba(255, 255, 255, 0.6); margin-left: 1%;" data-aos="fade-up">
       <p>
-        <div id="map" data-aos="fade-up" style="width: 70%; height: 65%; position: absolute; margin-top: 2%;  margin-left: 2%;"></div>
+        <!-- <div id="map" data-aos="fade-up" style="width: 70%; height: 65%; position: absolute; margin-top: 2%;  margin-left: 2%;"></div> -->
+        <div id="map_container"></div>
+        <div id="map"></div>
       </p>
-      <div id="socialMedia" style="margin-top: 70%;">
+      <div id="socialMedia" style="margin-top: 5%;">
         <p data-aos="fade-up" style="padding-top: 5%">
           <h2 style="margin-left: 1%" data-aos="fade-up">We're on social media on the following platforms</h2>
           <hr style="border-color: white; margin-left: 1%; width: 10%" data-aos="fade-up">
@@ -141,10 +156,10 @@
               <h5 style="margin-left: 2%" data-aos="fade-up"> <strong style="margin-right: 7%" data-aos="fade-up">Address :</strong> VIT Campus, Vidyalankar College Road, Wadala (E) Mumbai, MH 400037 </h5>
             </li>
             <li style="margin-top: 2%">
-              <h5 style="margin-left: 2%" data-aos="fade-up"> <strong style="margin-right: 5%" data-aos="fade-up">Contact No :</strong> +91 8976352943 </h5>
+              <h5 style="margin-left: 2%" data-aos="fade-up"> <strong style="margin-right: 5%" data-aos="fade-up">Contact No :</strong>+91 96655 18788 (Convenor), +91 8976352943 (Chairperson)</h5>
             </li>
             <li style="margin-top: 2%">
-              <h5 style="margin-left: 2%" data-aos="fade-up"> <strong style="margin-right: 9%" data-aos="fade-up">Email :</strong> pravin.kharat@vit.edu.in</h5>
+              <h5 style="margin-left: 2%" data-aos="fade-up"> <strong style="margin-right: 9%" data-aos="fade-up">Email :</strong> bhanu.tekwani@vit.edu.in (Convenor), pravin.kharat@vit.edu.in (Chairperson)</h5>
             </li>
           </ul>
         </p>
@@ -153,6 +168,8 @@
   </div>
 
   <script type="text/javascript">
+
+  $( document ).ready( function() {
     var map;
     function initMap() {
       map = new google.maps.Map(document.getElementById('map'), {
@@ -165,7 +182,19 @@
         position: {lat: 19.0215, lng: 72.871},
         map: map,
       });
-    }
+
+      // //Resize Function
+        google.maps.event.addDomListener(window, "resize", function() {
+          var center = map.getCenter();
+          google.maps.event.trigger(map, "resize");
+          map.setCenter(center);
+        });
+      }
+
+      //Initialize map on page load
+      google.maps.event.addDomListener(window, 'load', initMap);
+    });
+
   </script>
 
   <!-- ////////////////////Import JS File/////////////////////////// -->
